--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -25,9 +25,9 @@ loggin.level.root = TRACE
 
 
 ###################################################################
-reset.password.email.host=smtp.gmail.com
-reset.password.email.port=587
+reset.password.email.host=
+reset.password.email.port=
 reset.password.email.id=
 reset.password.email.pwd=
-reset.password.email.provider=GMAIL
-reset.password.email.subject=SICARIO
+reset.password.email.provider=
+reset.password.email.subject=
